SERVER-62368 Range deleter must honor rangeDeleterBatchDelayMS